--- a/index.html
+++ b/index.html
@@ -168,10 +168,28 @@
                 </a>
             </div>
             <div class="right">
-                <img src="./asstes/img/Thethirdpart1.png" width="40%">
-                <img src="./asstes/img/Thethirdpart2.png" width="40%">
-                <img src="./asstes/img/Thethirdpart3.png" width="40%">
-                <img src="./asstes/img/Thethirdpart4.png" width="40%">
+                <img src="./asstes/img/Thethirdpart1.png" width="47%">
+                <img src="./asstes/img/Thethirdpart2.png" width="47%">
+                <img src="./asstes/img/Thethirdpart3.png" width="47%">
+                <img src="./asstes/img/Thethirdpart4.png" width="47%">
+            </div>
+        </div>
+        <div class="end">
+            <div class="announcementImg">
+                <img src="./asstes/img/announcement.png">
+            </div>
+            <div class="announcementCon">
+                <h4>通知公告</h4>
+                <p>Medical Micro-biologist</p>
+                <p>Microbiology Quality Control Scientist</p>
+                <p>Cytologist </p>
+            </div>
+            <div class="separator"></div>
+            <div class="relations">
+                <h4>投资者关系</h4>
+                <div>
+                    <img src="./asstes/img/Investorrelations.png">
+                </div>
             </div>
         </div>
     </div>
@@ -181,6 +199,55 @@
         margin: auto;
         width: 1265px;
     }
-
+    .end{
+        height: 364px;
+        width: 100%;
+        display: flex;
+        flex-direction:row;
+    }
+    
+    .announcementImg img{
+        display: block;
+        padding-top: 35px;
+        padding-left: 30px;
+        width: 316px;
+        height: 316px;
+        border-radius: 50%;
+    }
+    .announcementCon{
+        width: 316px;
+        height: 316px;
+        margin-left: 60px;
+    }
+    .announcementCon h4{
+        color: #863800;
+        padding-top: 35px;
+        line-height: 50px;
+        width: 140px;
+        border-bottom: 5px solid #863800;
+    }
+    .announcementCon p{
+        margin-top: 40px;
+        font-weight: 700;
+    }
+    .separator{
+        margin-top: 35px;
+        width: 50px;
+        height: 50px;
+        border-right: 5px solid #C4C4C4;
+    }
+    .relations{
+        width: 516px;
+        height: 364px;
+    }
+    .relations h4{
+        text-align: center;
+        margin-top: 35px;
+    }
+    .relations img{
+        margin-top: 20px;
+        margin-left: 40px;
+        width: 450px;
+    }
 </style>
 </html>
