--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link type="text/css" rel="styleSheet"  href="./asstes/css/bootstrap.min.css" />
     <link type="text/css" rel="styleSheet"  href="./asstes/css/nav.css" />
+    <link type="text/css" rel="styleSheet"  href="./asstes/css/end.css" />
     <link type="text/css" rel="styleSheet"  href="./asstes/css/details.css" />
     <script type="text/javascript" src="./asstes/js/bootstrap.min.js"></script>
 </head>
@@ -192,62 +193,71 @@
                 </div>
             </div>
         </div>
+        <div class="foot">
+            <div class="aboutUs">
+                <h3>关于我们</h3>
+                <p>中海油田服务股份有限公司（中海油服, 
+                    China Oilfield Services Limited 或 COSL）
+                    是亚洲近海市场较具规模的综合型油田服务供应商。
+                    服务贯穿海上石油及天然气勘探，开发及生产的各个阶段。
+                    业务分为四大类：物探勘察服务、钻井服务、油田技术服务及船舶服务。
+                    COSL于2002年11月20日公开发行H股，并在香港联合交易所主板上市，股票编号：2883。
+                </p>
+                <p>Copyright 2015 All Right Reserverd 中海油田服务股份有限公司 版权所有 津ICP备17008252号</p>
+            </div>
+            <div class="navigation">
+                <h3>快速导航</h3>
+                <a href="#"> > 公司简介</a>
+                <a href="#"> > 企业理念</a>
+                <a href="#"> > 研发团队</a>
+                <a href="#"> > 研究基础</a>
+                <a href="#"> > 加入我们</a>
+            </div>
+        </div>
     </div>
+ 
 </body>
 <style>
     .box{
         margin: auto;
         width: 1265px;
+        /* width: 90%; */
     }
-    .end{
-        height: 364px;
+    .foot{
         width: 100%;
+        height: 280px;
         display: flex;
-        flex-direction:row;
+        flex-direction: row;
+        background-color: rgb(13, 131, 147);
     }
-    
-    .announcementImg img{
-        display: block;
-        padding-top: 35px;
-        padding-left: 30px;
-        width: 316px;
-        height: 316px;
-        border-radius: 50%;
-    }
-    .announcementCon{
-        width: 316px;
-        height: 316px;
-        margin-left: 60px;
-    }
-    .announcementCon h4{
-        color: #863800;
-        padding-top: 35px;
-        line-height: 50px;
-        width: 140px;
-        border-bottom: 5px solid #863800;
-    }
-    .announcementCon p{
-        margin-top: 40px;
-        font-weight: 700;
-    }
-    .separator{
-        margin-top: 35px;
-        width: 50px;
-        height: 50px;
-        border-right: 5px solid #C4C4C4;
-    }
-    .relations{
-        width: 516px;
-        height: 364px;
-    }
-    .relations h4{
-        text-align: center;
-        margin-top: 35px;
-    }
-    .relations img{
+    .aboutUs{
         margin-top: 20px;
-        margin-left: 40px;
-        width: 450px;
+        margin-left: 30px;
+        color: #FFFFFF;
+        width: 702px;
+    }
+    .aboutUs h3{
+        line-height: 50px;
+        border-bottom: 5px solid #FFFFFF;
+    }
+    .aboutUs p{
+        margin-top: 30px;
+    }
+    .navigation{
+        margin-top: 20px;
+        margin-left: 50px;
+        color: #FFFFFF;
+        width: 402px;
+    }
+    .navigation h3{
+        line-height: 50px;
+        border-bottom: 5px solid #FFFFFF;
+    }
+    .navigation a{
+        text-decoration: none;
+        color: #FFFFFF;
+        display: block;
+        margin-top: 10px;
     }
 </style>
 </html>
