--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link type="text/css" rel="styleSheet"  href="./asstes/css/bootstrap.min.css" />
     <link type="text/css" rel="styleSheet"  href="./asstes/css/nav.css" />
     <link type="text/css" rel="styleSheet"  href="./asstes/css/end.css" />
+    <link type="text/css" rel="styleSheet"  href="./asstes/css/foot.css" />
     <link type="text/css" rel="styleSheet"  href="./asstes/css/details.css" />
     <script type="text/javascript" src="./asstes/js/bootstrap.min.js"></script>
 </head>
@@ -223,41 +224,6 @@
         width: 1265px;
         /* width: 90%; */
     }
-    .foot{
-        width: 100%;
-        height: 280px;
-        display: flex;
-        flex-direction: row;
-        background-color: rgb(13, 131, 147);
-    }
-    .aboutUs{
-        margin-top: 20px;
-        margin-left: 30px;
-        color: #FFFFFF;
-        width: 702px;
-    }
-    .aboutUs h3{
-        line-height: 50px;
-        border-bottom: 5px solid #FFFFFF;
-    }
-    .aboutUs p{
-        margin-top: 30px;
-    }
-    .navigation{
-        margin-top: 20px;
-        margin-left: 50px;
-        color: #FFFFFF;
-        width: 402px;
-    }
-    .navigation h3{
-        line-height: 50px;
-        border-bottom: 5px solid #FFFFFF;
-    }
-    .navigation a{
-        text-decoration: none;
-        color: #FFFFFF;
-        display: block;
-        margin-top: 10px;
-    }
+    
 </style>
 </html>
