适配大部分

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <link type="text/css" rel="styleSheet" href="./asstes/css/foot.css" />
   <link type="text/css" rel="styleSheet" href="./asstes/css/details.css" />
   <link type="text/css" rel="styleSheet" href="./asstes/css/carousel.css" />
-  <link type="text/css" rel="styleSheet" href="./asstes/font/font.css" />
   <script type="text/javascript" src="./asstes/js/bootstrap.min.js"></script>
 </head>
 
@@ -106,150 +105,173 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <div class="container-fluid"">
-      <div class=" detail1 row ">
-      <div class=" col-sm-8">
-      <h1>河流穿越管段敷设状态检测设备的研发</h1>
-      </br>
-      <p>
-        检测系统发射机包括信号产生电路、滤波电路、功率放大电路、电流检测电路的研发设计</br>
-        多频率可调：256Hz、512Hz、1024Hz、2048H激励幅度可调，最大输出电流2A</br>
-        发射机达到国际工业标准IPX4防水等级。</br>
-      <p class="d-none d-lg-block">
-        完成发射端电路各个模块的研发设计具有多频率可调的功能</br>
-        输出激励幅度可调，输出电流在2A以上.防水等级已达到国际工业标准IPX4。</br>
-        包括前置放大滤波电路、后处理电路、采集处理电路的研发设计</br>
-        多频率可选，增益可调,具有测量读数显示功能</br>
-        接收机达到国际工业标准IPX4防水等级.完成接收天线的设计，与接收机的接口设计</br>
-        完成接收探棒整体结构设计，接收机与探棒通过导线连接，两者之间在结构上可快速组装成一体，也可拆卸为单体</br>
-        完成接收探棒及接收机的便携性设计防水等级已达到国际工业标准IPX4。</br>
-      </p>
-      </p>
-      <a href="#" class="readMore">
-        <p>READ MORE</p>
-      </a>
-    </div>
-    <div class="col-sm-4" style="display: flex;
-    align-items: center;">
-
-      <img src="./asstes/img/Thesecondpart.png" width="100%">
-    </div>
-  </div>
-
-  <div class=" detail2 ">
-    <div class="col-sm-4" style="display: flex;
-    align-items: center;">
-      <img src="./asstes/img/Thesecondpart.png" width="100%">
-    </div>
-    <div class="col-sm-8">
-      <h1>接收机及探棒说明、安装</h1>
-      <p>
-        </br>
-        接收机功能： </br>
-        （1） 向探棒中的电路提供控制信号；</br>
-        （2） 实时显示控制状态与测量结果； </br>
-        （3） 整个接收机系统的供电核心； </br>
-        （4） 与上位机建立通信，将测量结果每隔0.2S向上位机发送一次，同时将有效数据存储在SD卡中； </br>
-        （5） 装配有线盘及线盒，方便线缆的收集与使用； </br>
-      <p class="d-none d-lg-block">
-        探棒功能： </br>
-        （1）探棒中的探头将接收到的磁场信号转变为电信号； </br>
-        （2）将微弱的电信号经多级放大、滤波、有效值提取处理； </br>
-        （3）接收接收机的控制信号，完成对电路的控制工作； </br>
-        （4）处理和运算检测结果，将结果实时发送至接收机的控制板中； </br>
-        （5）设计有标准信号产生模块，可用于系统的温度校准； </br>
-        （5）可通过模拟开关，将输入信号短接到地，完成对电路中噪声的测试。
-      </p>
-      </p>
-      <a href="#" class="readMore">
-        <p>READ MORE</p>
-      </a>
-    </div>
-  </div>
-
-  <div class="detail3 row">
-    <div class="col-sm-6">
-      <h1>河流穿越管线检测系统整体介绍</h1>
-      <p>
-        </br>
-        硬件检测部分主要有发射机、接收机、接收探棒三大部分。</br>
-        发射机具有正弦信号产生功能，</br>
-        能够产生频率为256Hz、512Hz、1024Hz、2048Hz的低频正弦信号，</br>
-        且输出正弦信号幅度四档可调；带有电流检测与数据存储功能，</br>
-      <p class="d-none d-lg-block">对输出信号实时监测与数据存储；实时显示系统工作状态。
-        接收机具备多种频率可选(256Hz、512Hz、1024Hz、2048Hz )的接收采集功能，</br>
-        具备增益档位可调，具备接收磁场信息直接显示功能。</br></p>
-      </p>
-      <a href="#" class="readMore">
-        <p>READ MORE</p>
-      </a>
-    </div>
-    <div class="col-sm-6" style="display: flex;
-    align-items: center; flex-wrap: wrap; background-color: rgb(13, 131, 147);">
-      <img src="./asstes/img/Thethirdpart1.png" width="47%" style="margin:0 auto; margin-bottom: 1%;">
-      <img src="./asstes/img/Thethirdpart2.png" width="47%" style="margin:0 auto; margin-bottom: 1%;">
-      <img src="./asstes/img/Thethirdpart3.png" width="47%" style="margin:0 auto; margin-bottom: 1%;">
-      <img src="./asstes/img/Thethirdpart4.png" width="47%" style="margin:0 auto; margin-bottom: 1%;">
-    </div>
-  </div>
-  </div>
+    <div class="container-fluid">
 
 
-
-  <div class="end row">
-    <div class="announcementImg col-sm-4">
-      <img src="./asstes/img/announcement.png">
-    </div>
-    <div class="announcementCon col-sm-8">
-      <div>
-        <div>
-          <div class="announcementTil separated active">
-            <div>通知公告</div>
-          </div>
-          <div class="announcementTil">
-            <div>投资者关系</div>
-          </div>
+      <div class=" detail1 row">
+        <div class=" col-sm-8">
+          <h1>河流穿越管段敷设状态检测设备的研发</h1>
+          </br>
+          <p>
+            检测系统发射机包括信号产生电路、滤波电路、功率放大电路、电流检测电路的研发设计</br>
+            多频率可调：256Hz、512Hz、1024Hz、2048H激励幅度可调，最大输出电流2A</br>
+            发射机达到国际工业标准IPX4防水等级。</br>
+          <p class="d-none d-lg-block">
+            完成发射端电路各个模块的研发设计具有多频率可调的功能</br>
+            输出激励幅度可调，输出电流在2A以上.防水等级已达到国际工业标准IPX4。</br>
+            包括前置放大滤波电路、后处理电路、采集处理电路的研发设计</br>
+            多频率可选，增益可调,具有测量读数显示功能</br>
+            接收机达到国际工业标准IPX4防水等级.完成接收天线的设计，与接收机的接口设计</br>
+            完成接收探棒整体结构设计，接收机与探棒通过导线连接，两者之间在结构上可快速组装成一体，也可拆卸为单体</br>
+            完成接收探棒及接收机的便携性设计防水等级已达到国际工业标准IPX4。</br>
+          </p>
+          </p>
+          <a href="#" class="readMore">
+            <p>READ MORE</p>
+          </a>
         </div>
-        <div class="content activeCon row">
-          <div class="">
-            <div style="background-color: #863800;">
-              <p>Medical Micro-biologist</p>
-              <p>Microbiology Quality Control Scientist</p>
-              <p>Cytologist</p>
-            </div>
-          </div>
-          <div class="" ;" style="background-color: blueviolet;">
-            <img src="./asstes/img/Investorrelations.png" width="100%">
-          </div>
+        <div class="col-sm-4" style="display: flex;
+        align-items: center;">
+          <img src="./asstes/img/Thesecondpart.png" width="100%">
         </div>
-        <div class="content">快乐大本营</div>
+      </div>
+
+
+      <div class=" detail2 row">
+        <div class="col-sm-8 order-sm-2">
+          <h1>接收机及探棒说明、安装</h1>
+          <p>
+            </br>
+            接收机功能： </br>
+            （1） 向探棒中的电路提供控制信号；</br>
+            （2） 实时显示控制状态与测量结果； </br>
+            （3） 整个接收机系统的供电核心； </br>
+            （4） 与上位机建立通信，将测量结果每隔0.2S向上位机发送一次，同时将有效数据存储在SD卡中； </br>
+            （5） 装配有线盘及线盒，方便线缆的收集与使用； </br>
+          <p class="d-none d-lg-block order-sm-1">
+            探棒功能： </br>
+            （1）探棒中的探头将接收到的磁场信号转变为电信号； </br>
+            （2）将微弱的电信号经多级放大、滤波、有效值提取处理； </br>
+            （3）接收接收机的控制信号，完成对电路的控制工作； </br>
+            （4）处理和运算检测结果，将结果实时发送至接收机的控制板中； </br>
+            （5）设计有标准信号产生模块，可用于系统的温度校准； </br>
+            （5）可通过模拟开关，将输入信号短接到地，完成对电路中噪声的测试。
+          </p>
+          </p>
+          <a href="#" class="readMore">
+            <p>READ MORE</p>
+          </a>
+        </div>
+        <div class="col-sm-4 " style="display: flex;
+        align-items: center; ">
+          <img src="./asstes/img/Thesecondpart.png" width="100%">
+        </div>
+      </div>
+
+
+      <div class="detail3 row">
+        <div class="col-sm-6">
+          <h1>河流穿越管线检测系统整体介绍</h1>
+          <p>
+            </br>
+            硬件检测部分主要有发射机、接收机、接收探棒三大部分。</br>
+            发射机具有正弦信号产生功能，</br>
+            能够产生频率为256Hz、512Hz、1024Hz、2048Hz的低频正弦信号，</br>
+            且输出正弦信号幅度四档可调；带有电流检测与数据存储功能，</br>
+          <p class="d-none d-lg-block">对输出信号实时监测与数据存储；实时显示系统工作状态。
+            接收机具备多种频率可选(256Hz、512Hz、1024Hz、2048Hz )的接收采集功能，</br>
+            具备增益档位可调，具备接收磁场信息直接显示功能。</br></p>
+          </p>
+          <a href="#" class="readMore">
+            <p>READ MORE</p>
+          </a>
+        </div>
+        <div class="col-sm-6" style="display: flex;
+      align-items: center; flex-wrap: wrap; background-color: rgb(13, 131, 147);">
+          <img src="./asstes/img/Thethirdpart1.png" width="47%" style="margin:0 auto; margin-bottom: 1%;">
+          <img src="./asstes/img/Thethirdpart2.png" width="47%" style="margin:0 auto; margin-bottom: 1%;">
+          <img src="./asstes/img/Thethirdpart3.png" width="47%" style="margin:0 auto; margin-bottom: 1%;">
+          <img src="./asstes/img/Thethirdpart4.png" width="47%" style="margin:0 auto; margin-bottom: 1%;">
+        </div>
       </div>
     </div>
 
-  </div>
-  <div class="foot">
-    <div class="aboutUs">
-      <h3>关于我们</h3>
-      <p>中海油田服务股份有限公司（中海油服,
-        China Oilfield Services Limited 或 COSL）
-        是亚洲近海市场较具规模的综合型油田服务供应商。
-        服务贯穿海上石油及天然气勘探，开发及生产的各个阶段。
-        业务分为四大类：物探勘察服务、钻井服务、油田技术服务及船舶服务。
-        COSL于2002年11月20日公开发行H股，并在香港联合交易所主板上市，股票编号：2883。
-      </p>
-      <p class="d-none d-lg-block">Copyright 2015 All Right Reserverd 中海油田服务股份有限公司 版权所有 津ICP备17008252号</p>
-    </div>
-    <div class="navigation">
-      <h3>快速导航</h3>
-      <a href="#"> > 公司简介</a>
-      <a href="#"> > 企业理念</a>
-      <a href="#"> > 研发团队</a>
-      <a href="#"> > 研究基础</a>
-      <a href="#"> > 加入我们</a>
-    </div>
-  </div>
-  </div>
 
+
+
+
+
+    <div class="container-fluid">
+      <div class="row">
+
+        <div class="announcementImg col-sm-3" style="display: flex;align-items: center;">
+          <img src="./asstes/img/announcement.png">
+        </div>
+
+        <div class="col-sm-9">
+          <div class="row">
+            <div>
+              <div class="announcementTil separated active">
+                <div>通知公告</div>
+              </div>
+              <div class="announcementTil">
+                <div>投资者关系</div>
+              </div>
+            </div>
+            <!-- 通知公告 -->
+            <div class="content activeCon row">
+              <div class="col-sm-6 mm">
+                <div>
+                  <h5>● Medical Micro-biologist</h5>
+                  <h5>● Microbiology Quality Control Scientist</h5>
+                  <h5>● Cytologist</h5>
+                </div>
+              </div>
+              <div class="col-sm-6 mm" style="display: flex;
+              align-items: center;">
+                <img src="./asstes/img/Investorrelations.png" width="100%">
+              </div>
+            </div>
+            <!-- 投资者关系 -->
+            <div class="content row">
+              <div class="col-6 col-sm-6">
+                <div>
+                  <h5>● Medical Micro-biologist</h5>
+                  <h5>● Microbiology Quality Control Scientist</h5>
+                  <h5>● Cytologist</h5>
+                </div>
+              </div>
+              <div class="col-6 col-sm-6" style="display: flex;
+              align-items: center;">
+                <img src="./asstes/img/Investorrelations.png" width="100%">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="foot">
+      <div class="aboutUs">
+        <h3>关于我们</h3>
+        <p>中海油田服务股份有限公司（中海油服,
+          China Oilfield Services Limited 或 COSL）
+          是亚洲近海市场较具规模的综合型油田服务供应商。
+          服务贯穿海上石油及天然气勘探，开发及生产的各个阶段。
+          业务分为四大类：物探勘察服务、钻井服务、油田技术服务及船舶服务。
+          COSL于2002年11月20日公开发行H股，并在香港联合交易所主板上市，股票编号：2883。
+        </p>
+        <p class="d-none d-lg-block">Copyright 2015 All Right Reserverd 中海油田服务股份有限公司 版权所有 津ICP备17008252号</p>
+      </div>
+      <div class="navigation">
+        <h3>快速导航</h3>
+        <a href="#"> > 公司简介</a>
+        <a href="#"> > 企业理念</a>
+        <a href="#"> > 研发团队</a>
+        <a href="#"> > 研究基础</a>
+        <a href="#"> > 加入我们</a>
+      </div>
+    </div>
+  </div>
 </body>
 
 <style>
@@ -261,7 +283,6 @@
   .body {
     margin: 0 auto;
     width: 100vw;
-    font-family: MSYH;
   }
 
   .announcementTil {
@@ -290,19 +311,17 @@
   }
 
   .content {
-    background-color: aqua;
     display: none;
   }
 
   .activeCon {
-    display: inline-block;
-    width: 100%;
+    display: flex;
   }
 
   @media (min-width: 800px) {
-    .content div {
-      width: 49%;
-    }
+    /* .content div {
+      width: 48%;
+    } */
   }
 </style>
 
